Animation Worklet: Use the correct time in WorkletAnimation::GetTimeForKeyframeModel

This code used to assume that the local_time_ was equivalent to the
active time, but that isn't true. Active time is local time - start
delay, so the start delay (time_offset_) shouldn't be removed when
converting local_time_ to 'real' time.

Bug: 824782
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I3cc570c4054843bf31cdba0f58917f4566ccd8b1
Reviewed-on: https://chromium-review.googlesource.com/1008062
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Reviewed-by: Majid Valipour <majidvp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550766}
Former-commit-id: d358adeeefdf6e1fa835a1738ea50ecf6806a51c